update EIS dependency